# solana-ai-agent

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
apply/: application.yaml
configs/: arb-scout.toml
examples/: ping_mimo.rs
src/: agent.rs  config.rs  lib.rs  main.rs  mimo.rs  signer.rs  strategy.rs
