[package]
name = "solana-ai-agent"
version = "0.1.0"
edition = "2021"
authors = ["solana-ai-agent contributors"]
license = "MIT"
description = "AI-driven on-chain agent framework for Solana, powered by Xiaomi MiMo"
repository = "https://github.com/FlipZ3ro/solana-ai-agent"
keywords = ["solana", "mimo", "llm", "agent", "rust"]
categories = ["cryptography::cryptocurrencies", "web-programming"]
readme = "README.md"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
dotenvy = "0.15"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
futures-util = "0.3"
url = "2.5"
solana-client = "1.18"
solana-sdk = "1.18"
solana-program = "1.18"
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "solana-ai-agent"
path = "src/main.rs"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
